grammar.js
  source_file: $ => repeat($._description),

  _description: $ => prec('_description', choice(
    $.module_declaration,
    $.udp_declaration,
    $.interface_declaration,
    $.program_declaration,
    $.package_declaration,
    seq(repeat($.attribute_instance), choice($._package_item, $.bind_directive)),
    $._library_text, // Includes $.config_declaration as one of its branches
    $.snippets, // Out of LRM (inlined)
  )),

  _module_header: $ => seq( // Out of LRM, groups common tokens of module headers
    repeat($.attribute_instance),
    $.module_keyword,
    optional($.lifetime),
    field('name', $.module_identifier),
    repeat(choice($.conditional_compilation_directive, $.package_import_declaration)), // New option, Out of LRM
    repeat($.package_import_declaration),
    optional($.parameter_port_list)
  ),

  module_ansi_header: $ => seq(
    $._module_header,
    optional($.list_of_port_declarations),
    ';'
  ),

  module_declaration: $ => prec('module_declaration', choice(
    seq( // nonANSI
      $.module_nonansi_header,
      optional($.timeunits_declaration),
      repeat(alias($._module_item, $.module_item)),
      enclosing('endmodule', $.module_identifier)
    ),
    seq( // ANSI
      $.module_ansi_header,
      optional($.timeunits_declaration),
      repeat($._non_port_module_item),
      enclosing('endmodule', $.module_identifier)
    ),
    seq( // extern module with dot star as the ports of the module (23.5)
      repeat($.attribute_instance),
      $.module_keyword,
      optional($.lifetime),
      field('name', $.module_identifier),
      '(', '.*', ')', ';',
      optional($.timeunits_declaration),
      repeat(alias($._module_item, $.module_item)),
      enclosing('endmodule', $.module_identifier)
    ),
    seq('extern', $.module_nonansi_header),
    seq('extern', $.module_ansi_header)
  )),

  module_keyword: $ => choice('module', 'macromodule'),

  list_of_port_declarations: $ => seq(
    '(',
    commaSep(seq(
      optional($.conditional_compilation_directive), // New option, Out of LRM
      repeat($.attribute_instance),
      $.ansi_port_declaration)
    ),
    ')'
  ),

  port_direction: $ => prec('port_direction', choice(
    'input', 'output', 'inout', 'ref'
  )),

  // Modified to avoid matching empty string, ($.net_port_type could match empty string)
  net_port_header: $ => choice(
    seq(optional($.port_direction), $.net_port_type),
    $.port_direction
  ),

  ansi_port_declaration: $ => prec('ansi_port_declaration', choice(
    prec.dynamic(0, seq(
      optchoice($.net_port_header, $.interface_port_header),
      field('port_name', $.port_identifier),
      repeat(prec('ansi_port_declaration', $.unpacked_dimension)),
      optseq('=', $.constant_expression)
    )),
    prec.dynamic(1, seq(
      optional($.variable_port_header),
      field('port_name', $.port_identifier),
      repeat($._variable_dimension),
      optseq('=', $.constant_expression)
    )),
    seq(
      optional($.port_direction), '.',
      field('port_name', $.port_identifier),
      '(', optional($.expression), ')'
    )
  )),


// ** A.1.4 Module items
  _module_item: $ => choice(
    seq($.port_declaration, ';'),
    $._non_port_module_item
  ),

  _non_port_module_item: $ => prec('_non_port_module_item', choice(
    $.generate_region,
    $._module_or_generate_item,
    $.specify_block,
    seq(repeat($.attribute_instance), $.specparam_declaration),
    $.program_declaration,
    $.module_declaration,
    $.interface_declaration,
    $.timeunits_declaration, // A.10.3
    $._directives, // Out of LRM
  )),

  data_declaration: $ => prec('data_declaration', choice(
    seq(
      optional('const'),
      // A.10.4: In a data_declaration, it shall be illegal to omit the explicit data_type
      // before a list_of_variable_decl_assignments unless the var keyword is used.
      choice(
        seq('var', optional($.lifetime), optional($.data_type_or_implicit)),
        seq(optional($.lifetime), $.data_type_or_implicit),
      ),
      $.list_of_variable_decl_assignments,
      ';'
    ),
    $.type_declaration,
    $.package_import_declaration,
    $.nettype_declaration
  )),

  data_type: $ => prec('data_type', choice(
    seq($.integer_vector_type, optional($._signing), repeat($.packed_dimension)),
    seq($.integer_atom_type, optional($._signing)),
    $.non_integer_type,
    seq(
      $.struct_union,
      optseq('packed', optional($._signing)),
      '{', repeat1(choice($._directives, $.struct_union_member)), '}', // _directives out of LRM, (e.g. allow use of `ifdefs in structs)
      repeat($.packed_dimension)
    ),
    seq(
      'enum', optional($.enum_base_type),
      '{', repeat1(choice($._directives, seq($.enum_name_declaration, optional(',')))), '}', // _directives out of LRM, (e.g. allow use of `ifdefs in enums)
      repeat($.packed_dimension)
    ),
    'string',
    'chandle',
    seq(
      'virtual', optional('interface'),
      $.interface_identifier,
      optional($.parameter_value_assignment),
      optseq('.', $.modport_identifier)
    ),
    seq(
      optchoice($.class_scope, $.package_scope),
      $.type_identifier,
      repeat($.packed_dimension)
    ),
    $.class_type,
    'event',
    $.ps_covergroup_identifier,
    $.type_reference
  )),

  data_type_or_implicit: $ => prec('data_type_or_implicit', choice(
    $.data_type,
    $.implicit_data_type
  )),

  // Modified to avoid matching empty string
  implicit_data_type: $ => prec.right(choice(
    seq($._signing, repeat($.packed_dimension)),
    repeat1($.packed_dimension)
  )),

  integer_atom_type: $ => choice('byte', 'shortint', 'int', 'longint', 'integer', 'time'),

  integer_vector_type: $ => choice('bit', 'logic', 'reg'),

  net_port_type: $ => choice(
    $.net_type,
    seq(optional($.net_type), $.data_type_or_implicit),
    $.nettype_identifier,
    seq('interconnect', optional($.implicit_data_type))
  ),

  _signing: $ => choice('signed', 'unsigned'),

  list_of_variable_decl_assignments: $ => commaSep1($.variable_decl_assignment),

  variable_decl_assignment: $ => choice(
    seq(
      field('name', $.variable_identifier),
      repeat($._variable_dimension),
      optseq('=', $.expression)
    ),
    seq(
      field('name', $.dynamic_array_variable_identifier),
      $.unsized_dimension,
      repeat($._variable_dimension),
      optseq('=', $.dynamic_array_new)
    ),
    seq(
      field('name', $.class_variable_identifier),
      optseq('=', $.class_new)
    )
  ),

  packed_dimension: $ => prec('packed_dimension', choice(
    seq('[', $.constant_range, ']'),
    $.unsized_dimension
  )),

  _variable_dimension: $ => prec('_variable_dimension', choice(
    $.unsized_dimension,
    prec.dynamic(0, $.unpacked_dimension),
    $.associative_dimension,
    prec.dynamic(1, $.queue_dimension)
  )),

  continuous_assign: $ => seq(
    'assign',
    choice(
      seq(optional($.drive_strength), optional($.delay3), $.list_of_net_assignments),
      seq(optional($.delay_control), $.list_of_variable_assignments)
    ) ,
    ';'
  ),

  list_of_net_assignments: $ => commaSep1($.net_assignment),

  net_assignment: $ => seq($.net_lvalue, '=', $.expression),


// ** A.6.2 Procedural blocks and assignments
  initial_construct: $ => seq('initial', $.statement_or_null),

  always_construct: $ => seq($.always_keyword, $.statement),

  always_keyword: $ => choice('always', 'always_comb', 'always_latch', 'always_ff'),

  final_construct: $ => seq('final', $.function_statement),

  blocking_assignment: $ => choice(
    seq($.variable_lvalue, '=', $.delay_or_event_control, $.expression),
    seq($.nonrange_variable_lvalue, '=', $.dynamic_array_new),
    seq(
      optchoice(seq($.implicit_class_handle, '.'), $.class_scope, $.package_scope),
      $.hierarchical_variable_identifier, optional($.select), '=', $.class_new
    ),
    $.operator_assignment,
    $.inc_or_dec_expression,
  ),

  operator_assignment: $ => seq($.variable_lvalue, $.assignment_operator, $.expression),

  assignment_operator: $ => choice(
    '=', '+=', '-=', '*=', '/=', '%=', '&=', '|=', '^=', '<<=', '>>=', '<<<=', '>>>='
  ),

  nonblocking_assignment: $ => seq(
    $.variable_lvalue,
    '<=',
    optional($.delay_or_event_control),
    $.expression
  ),

  seq_block: $ => seq(
    'begin', optseq(':', $.block_identifier),
    repeat($.block_item_declaration),
    repeat($.statement_or_null),
    enclosing('end', $.block_identifier)
  ),

  statement_or_null: $ => prec('statement_or_null', choice(
    $.statement,
    seq(repeat($.attribute_instance), ';')
  )),

  statement: $ => seq(
    optseq(field('block_name', $.block_identifier), ':'),
    repeat($.attribute_instance),
    $.statement_item
  ),

  statement_item: $ => prec('statement_item', choice(
    seq($.blocking_assignment, ';'),
    seq($.nonblocking_assignment, ';'),
    seq($.procedural_continuous_assignment, ';'),
    $.case_statement,
    $.conditional_statement,
    $.subroutine_call_statement,
    $.disable_statement,
    $.event_trigger,
    $.loop_statement,
    $.jump_statement,
    $.par_block,
    $.procedural_timing_control_statement,
    $.seq_block,
    $.wait_statement,
    $._procedural_assertion_statement,
    prec.dynamic(-1, seq($.clocking_drive, ';')), // NBA > clocking drive (outside of a clocking block)
    $.randsequence_statement,
    $.randcase_statement,
    $.expect_property_statement,
    $._directives, // Out of LRM
  )),

  function_statement: $ => $.statement,

  procedural_timing_control_statement: $ => seq(
    $._procedural_timing_control,
    $.statement_or_null
  ),

  event_control: $ => choice(
    $.clocking_event,
    seq('@', '*'),
    seq('@', '(', '*', ")")
  ),

  clocking_event: $ => seq(
    '@',
    choice(
      $.ps_identifier,
      $.hierarchical_identifier,
      seq('(', $.event_expression, ')')
    )
  ),

  event_expression: $ => prec('event_expression', choice(
    prec.dynamic(1, seq(optional($.edge_identifier), $.expression, optseq('iff', $.expression))),
    seq($.sequence_instance, optseq('iff', $.expression)),
    prec.left(seq($.event_expression, 'or', $.event_expression)),
    prec.left('event_expression', seq($.event_expression, ',', $.event_expression)),
    seq('(', $.event_expression, ')')
  )),

  _procedural_timing_control: $ => choice(
    $.delay_control,
    $.event_control,
    $.cycle_delay
  ),

  jump_statement: $ => seq(
    choice(
      seq('return', optional($.expression)),
      'break',
      'continue',
    ),
    ';'
  ),

  disable_statement: $ => choice(
    seq('disable', $.hierarchical_task_identifier, ';'),
    seq('disable', $.hierarchical_block_identifier, ';'),
    seq('disable', 'fork', ';')
  ),


// ** A.6.6 Conditional statements
  conditional_statement: $ => seq(
    optional($.unique_priority),
    'if', '(', $.cond_predicate, ')', $.statement_or_null, optional($.conditional_compilation_directive),                 // $.conditional_compilation_directive out of LRM
    repseq('else', 'if', '(', $.cond_predicate, ')', $.statement_or_null, optional($.conditional_compilation_directive)), // $.conditional_compilation_directive out of LRM
    prec.dynamic(-1, optseq('else', $.statement_or_null))
  ),

  cond_predicate: $ => prec(PREC.CONDITIONAL, sepBy1('&&&', $._expression_or_cond_pattern)),

  _expression_or_cond_pattern: $ => choice(
    $.expression,
    $.cond_pattern
  ),

  _assignment_pattern_expression_type: $ => prec('_assignment_pattern_expression_type', choice(
    $.ps_type_identifier,
    $.ps_parameter_identifier,
    $.integer_atom_type,
    $.type_reference
  )),

  _constant_assignment_pattern_expression: $ => prec('_constant_assignment_pattern_expression', $.assignment_pattern_expression),

  loop_statement: $ => choice(
    seq('forever', $.statement_or_null),
    seq('repeat', '(', $.expression, ')', $.statement_or_null),
    seq('while', '(', $.expression, ')', $.statement_or_null),
    seq(
      'for',
      '(', optional($.for_initialization), ';', optional($.expression), ';', optional($.for_step), ')',
      $.statement_or_null
    ),
    seq('do', $.statement_or_null, 'while', '(', $.expression, ')', ';'),
    seq(
      'foreach',
      '(', $.ps_or_hierarchical_array_identifier, '[', optional($.loop_variables), ']', ')',
      $.statement
    )
  ),

  subroutine_call_statement: $ => prec('subroutine_call_statement', choice(
    seq($.subroutine_call, ';'),
    seq('void\'', '(', $.function_subroutine_call, ')', ';'),
    $.severity_system_task,   // Out of LRM: allow $fatal/$error/$warning/$info in procedural code
    $.simulation_control_task // Out of LRM: allow $stop/$finish/$exit in procedural code
  )),


// ** A.6.10 Assertion statements
  _procedural_assertion_statement: $ => prec('_procedural_assertion_statement', choice(
    $._concurrent_assertion_statement,
    $._immediate_assertion_statement,
    $.checker_instantiation
  )),

  edge_identifier: $ => choice('posedge', 'negedge', 'edge'),

  system_tf_call: $ => prec.right(seq(
    $.system_tf_identifier,
    choice(
      prec.dynamic(1, optseq('(', optional($.list_of_arguments), ')')),
      seq('(', $.data_type, optseq(',', $.expression), ')'),
      prec.dynamic(0, seq('(', commaSep1($.expression), optseq(',', $.clocking_event), ')'))
    )
  )),

  subroutine_call: $ => choice(
    $.tf_call,
    $.system_tf_call,
    $.method_call,
    seq(optseq('std', '::'), $.randomize_call),
  ),

  function_subroutine_call: $ => $.subroutine_call,

  list_of_arguments: $ => list_of_args($, 'list_of_arguments', $.expression),

  constant_expression: $ => choice(
    $.constant_primary,
    $._constant_unary_expression,
    $._constant_binary_expression,
    $._constant_conditional_expression,
    alias($._inside_constant_expression, $.inside_expression), // Out of LRM
    $.text_macro_usage, // Out of LRM
  ),

  _constant_range_expression: $ => choice(
    $.constant_expression,
    $._constant_part_select_range
  ),

  constant_range: $ => seq($.constant_expression, ':', $.constant_expression),

  expression: $ => prec('expression', choice(
    $.primary,
    $._unary_expression,
    $.inc_or_dec_expression,
    $._parenthesized_expression,
    $._binary_expression,
    $.conditional_expression,
    $.inside_expression,
    $.tagged_union_expression,
    $.text_macro_usage,               // Out of LRM
    $.file_or_line_compiler_directive // Out of LRM
  )),

  _inside_constant_expression: $ => prec.left(PREC.RELATIONAL, seq(
    $.constant_expression, 'inside', '{', $.range_list, '}'
  )),

  mintypmax_expression: $ => prec('mintypmax_expression', seq(
    $.expression,
    optseq(':', $.expression, ':', $.expression)
  )),

  _part_select_range: $ => choice(
    $.constant_range,
    $.indexed_range
  ),

  indexed_range: $ => seq(
    $.expression, choice('+:', '-:'), $.constant_expression
  ),

  _unary_expression: $ => unary_expr($, $.unary_operator, $.primary),

  _binary_expression: $ => binary_expr($, BINARY_OP_TABLE, $.expression),

  _parenthesized_expression: $ => paren_expr($.operator_assignment),

  _constant_unary_expression: $ => unary_expr($, $.unary_operator, $.constant_primary),

  _constant_binary_expression: $ => binary_expr($, BINARY_OP_TABLE, $.constant_expression),

  _constant_conditional_expression: $ => conditional_expr($, $.constant_expression, $.constant_expression),

  primary_literal: $ => choice(
    $._number,
    $.time_literal,
    $.unbased_unsized_literal,
    $.string_literal,
  ),

  _constant_let_expression: $ => $.let_expression,


// ** A.8.5 Expression left-side values
  net_lvalue: $ => choice(
    seq($.ps_or_hierarchical_net_identifier, optional($.constant_select)),
    seq('{', commaSep1($.net_lvalue), '}'),
    seq(optional($._assignment_pattern_expression_type), $.assignment_pattern_net_lvalue)
  ),

  _number: $ => choice($.integral_number, $.real_number),

  _size: $ => prec('_size', $.unsigned_number),
